fixed gap between media player

--- a/assignment2/style.css
+++ b/assignment2/style.css
@@ -66,6 +66,7 @@ h2 {
   font-family: "Silkscreen", sans-serif;
   font-weight: 700;
   font-style: normal;
+  margin-top: 10px;
 }
 
 /* Navigation styling */
@@ -96,7 +97,7 @@ nav a {
 
 .media-player {
   width: 100%;
-  margin: 0 auto;
+  margin: 10px 0 0;
 }
 
 .media-player audio {
